@@ -1,19 +1,0 @@
-## texk/dvisvgm/ac/dvisvgm.ac: configure.ac fragment for the TeX Live subdirectory texk/dvisvgm/
-dnl
-dnl Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
-dnl You may freely use, modify and/or distribute this file.
-dnl
-## configure options for dvisvgm
-AC_ARG_WITH([libgs],
-            AS_HELP_STRING([--without-libgs],
-                           [build dvisvgm without PostScript support]))
-AC_ARG_WITH([system-libgs],
-            AS_HELP_STRING([--with-system-libgs],
-                           [build dvisvgm with installed gs headers and library
-                            @<:@default: no@:>@]))
-AC_ARG_WITH([libgs-includes],
-            AS_HELP_STRING([--with-libgs-includes=DIR],
-                           [libgs headers installed in DIR]))
-AC_ARG_WITH([libgs-libdir],
-            AS_HELP_STRING([--with-libgs-libdir=DIR],
-                           [libgs library installed in DIR]))
