@@ -1,3 +1,9 @@
+2017-02-01  Karl Berry  <karl@tug.org>
+
+	* ac/libgs.ac: remove (unused).
+	* ac/dvisvgm.ac: remove (libgs options).
+	* configure.ac: do not include ac/dvisvgm.ac.
+
 2017-01-29  Karl Berry  <karl@freefriends.org>
 
 	Import 2.1; adapt build to use more of original; regenerate files.
